--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,9 @@
+/*------------------------------------General------------------------------*/
 header img {
     border-radius: 50px;
+}
+
+header {
+    display: flex;
+    
 }
