--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,5 +5,18 @@ header img {
 
 header {
     display: flex;
-    
+    align-items: center;
+    justify-content: center;
+}
+
+header ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+}
+
+header ul li{
+    background-color: rgba(165, 42, 42, 0.393);
+    color: white;
+    padding: 5px 20px;
 }
