--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,7 @@ header img {
 header {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 header ul {
