--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,7 +42,7 @@ header {
 .a_index{
     text-decoration: none;
 }
-.footer_index{
+footer{
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -50,7 +50,7 @@ header {
     height: 150px;
 }
 
-.p_footer_index{
+footer p{
     color: white;
     font-weight: bold;
 }
@@ -155,11 +155,31 @@ header {
 
 /*--------------------------------------------------------login------------------------------------------*/
 
-.formslogin {
-    display: flex;
+.bodylogin{
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    
+}
+
+.formslogin {
+    background-color:rgba(188, 52, 31, 0.689);
+    border-radius: 8px;
+    padding: 20px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 600px;
+}
+
+.botonlogin{
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(230, 57, 70);
+    color: white;
 }
 
 .seccion_detalles{
