--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -153,7 +153,7 @@ footer p{
     font-size: 20px;
 }
 
-/*--------------------------------------------------------login------------------------------------------*/
+/*--------------------------------------------------------login y registro-------------------------------------------------------*/
 
 .bodylogin{
     justify-content: center;
@@ -168,10 +168,10 @@ footer p{
     width: 300px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
-    margin-left: 600px;
+    margin: 50px 600px;
 }
 
 .botonlogin{
@@ -182,13 +182,23 @@ footer p{
     color: white;
 }
 
-.seccion_detalles{
-    display: flex;
-    flex-wrap:  wrap;
-    flex-direction:row;
-    justify-content: space-around;
-    align-items: center;   
+.registrate{
+    color: white;
 }
+
+.formslogin a{
+    text-decoration: none;
+    color: white;
+}
+
+.alert{
+    background-color: rgb(224, 224, 88);
+}
+
+.terminos{
+    color: white;
+}
+
 /*-----------------------------------------------------recteas---------------------------------------------------*/
 
 .seccion_detalles{
