--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -160,6 +160,11 @@ footer p{
     align-items: center;
     
 }
+.seccion_form_login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .formslogin {
     background-color:rgba(188, 52, 31, 0.689);
@@ -172,6 +177,7 @@ footer p{
     justify-content: center;
     align-items: center;
     margin: 50px 750px;
+    border:4px, solid, rgba(117, 34, 22, 0.689);
 }
 
 .botonlogin{
@@ -180,6 +186,12 @@ footer p{
     border-radius: 5px;
     background-color: rgb(230, 57, 70);
     color: white;
+}
+
+.seccion_form_registro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .registrate{
@@ -197,7 +209,12 @@ footer p{
 
 .terminos{
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
+
 
 /*-----------------------------------------------------recteas---------------------------------------------------*/
 
