--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -252,19 +252,33 @@ footer p{
 
 /*----------------------------------------------------Categorias---------------------------------------------------*/
 .picante{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
     text-decoration: none;
     color: black;
 }
-.categoria8{
-    text-decoration: none;
-    color: black;
+.article_de_cada_categoria{
+    width: 40%;
     display: flex;
-   justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
+    background-color:rgba(165, 42, 42, 0.568);
+    padding: 10px;
+    border-radius: 13px;
+    border:2px, solid, rgba(117, 34, 22, 0.689);
+}
+.cada_categoria{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
 /*----------------------------------------------------detalles de recetas-------------------------------------------*/
 .main_detalles{
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 25px;
+    padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px ;
 
@@ -283,14 +297,14 @@ footer p{
 .imagen_receta_detalles{
     width: 500px;
     border-radius: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 .detalles_titulo_tp_tc{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     background-color: rgba(165, 42, 42, 0.568);
     padding: 15px;
     border-radius: 10px;
@@ -299,9 +313,24 @@ footer p{
 .detalles_titulo_solo{
     margin-bottom: 25px;
     font-size: 20px;
+    background-color: rgba(165, 42, 42, 0.19);
+    padding: 30px;
+    border-radius: 15px;
+    border:2px, solid, rgba(117, 34, 22, 0.689);
 }
 .a_detalles_categoria{
     text-decoration: none;
     color: white;
     
+}
+.instrucciones_de_detalle{
+    background-color: rgba(165, 42, 42, 0.19);
+    padding: 30px;
+    border-radius: 15px;
+    border:2px, solid, rgba(117, 34, 22, 0.689);
+}
+.titulo_instrucciones{
+    margin-bottom: 8px;
+    font-size: 20px;
+
 }
