--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -118,13 +118,25 @@ footer p{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     margin-top: 20px;
     width: 350px;
     padding: 15px;
     border-radius: 20px;
     background-color: beige;
 }
-
+.formulario_index_menos_que3{
+    color: red;
+    width: 100%;
+    height: 10px;
+    display: none;
+ 
+}
+.input_boton_formulario_index{
+    display: flex;
+    align-items: center;
+    justify-content:center
+}
 .boton_index_forms{
     margin-left: 10px;
     padding: 4px;
