--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -349,3 +349,9 @@ footer p{
     font-size: 20px;
 
 }
+
+/*-------------------------------------------resolucion mobile---------------------------------*/
+
+@media(max-width: 650px){
+
+}
