--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -481,3 +481,85 @@ footer p{
     
   }
 }
+/*--------------------------------Resolucion Computadora-------------------------*/
+@media(max-width: 1200px){
+
+    .main_index{
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      width: 100%;
+    }  
+  
+    .main_index img{
+      width: 80%;
+    }
+    
+    .article_de_fotos{
+      width: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: none;
+  
+    }
+    
+    .h12{
+      display: none;
+    }
+  
+    .article_de_cada_categoria{
+      width: 40%;
+    }
+  
+    .nav_index{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  
+      
+    }
+  
+    .nav_index a{
+      margin-top: 15px;
+      
+    }
+  
+    header {
+      background-image: none;
+      background-color: rgb(255, 245, 235);
+    }
+  
+    .main_detalles{
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  
+  
+  
+    .seccion_detalles_de_recetas{
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      
+    }
+  
+    .seccion_detalles_de_recetas img{
+      width: 80%;
+    }
+  
+    .detalles_titulo_tp_tc{
+      width: 60%;
+    }
+  
+    footer{
+      display: flex;
+      flex-direction: column;
+      
+    }
+  }
+    
+
